Added command to verify if container is healthy, and renamed service from portainer to server

--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -8,7 +8,7 @@ networks:
   front:
 
 services:
-  portainer:
+  server:
     image: portainer/portainer-ce:2.11.0-alpine
     restart: always
     volumes:
